--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -4,13 +4,18 @@ metadata:
   name: spark-config
 data:
   spark-defaults.conf: |
-    spark.sql.extensions                            io.delta.sql.DeltaSparkSessionExtension
-    spark.sql.catalog.warehouse                     org.apache.spark.sql.delta.catalog.DeltaCatalog
-    spark.sql.warehouse.dir                         s3a://spark/warehouse
-    spark.hadoop.fs.s3a.endpoint                    http://minio.kube-system.svc.cluster.local:9000
-    spark.hadoop.fs.s3a.endpoint.region             us-east-1
-    spark.hadoop.fs.s3a.access.key                  ${SECRET_SPARKMINIO_ACCESS_KEY}
-    spark.hadoop.fs.s3a.secret.key                  ${SECRET_SPARKMINIO_SECRET_KEY}
-    spark.hadoop.fs.s3a.path.style.access           true
-    spark.hadoop.fs.s3a.connection.ssl.enabled      false
-    spark.hadoop.fs.s3a.impl                        org.apache.hadoop.fs.s3a.S3AFileSystem
+    spark.sql.extensions                                  io.delta.sql.DeltaSparkSessionExtension
+    spark.sql.catalog.warehouse                           org.apache.spark.sql.delta.catalog.DeltaCatalog
+    # spark.sql.warehouse.dir                             s3a://spark/warehouse
+    spark.sql.warehouse.dir                               /opt/spark/workspace/
+    spark.hadoop.fs.s3a.endpoint                          http://minio.kube-system.svc.cluster.local:9000
+    spark.hadoop.fs.s3a.endpoint.region                   us-east-1
+    spark.hadoop.fs.s3a.access.key                        ${SECRET_SPARKMINIO_ACCESS_KEY}
+    spark.hadoop.fs.s3a.secret.key                        ${SECRET_SPARKMINIO_SECRET_KEY}
+    spark.hadoop.fs.s3a.path.style.access                 true
+    spark.hadoop.fs.s3a.connection.ssl.enabled            false
+    spark.hadoop.fs.s3a.impl                              org.apache.hadoop.fs.s3a.S3AFileSystem
+    spark.hadoop.javax.jdo.option.ConnectionDriverName    org.postgresql.Driver
+    spark.hadoop.javax.jdo.option.ConnectionURL           jdbc:postgresql://cloudnative-pg-cluster.database.svc.cluster.local:5432/metastore
+    spark.hadoop.javax.jdo.option.ConnectionUserName      ${SECRET_POSTGRES_USERNAME}
+    spark.hadoop.javax.jdo.option.ConnectionPassword      ${SECRET_POSTGRES_PASSWORD}
