--- a/kubernetes/apps/default/sparknova/app/pvc.yaml
+++ b/kubernetes/apps/default/sparknova/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-spark
+  name: pv-sparknova-warehouse
   namespace: default
 spec:
   storageClassName: "network-storage"
@@ -13,18 +13,49 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.2
-    path: "/volume1/network-storage/kube-spark"
+    path: "/volume1/network-storage/sparknova/warehouse"
     readOnly: false
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-spark
+  name: pvc-sparknova-warehouse
   namespace: default
 spec:
   accessModes:
     - ReadWriteMany
-  volumeName: pv-spark
+  volumeName: pv-sparknova-warehouse
+  storageClassName: "network-storage"
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-sparknova-workspace
+  namespace: default
+spec:
+  storageClassName: "network-storage"
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: 192.168.1.2
+    path: "/volume1/network-storage/sparknova/workspace"
+    readOnly: false
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-sparknova-workspace
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteMany
+  volumeName: pv-sparknova-workspace
   storageClassName: "network-storage"
   resources:
     requests:
