--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -85,6 +85,10 @@ spec:
             kubernetes.io/arch: "amd64"
     service:
       main:
+        annotations:
+          io.cilium/lb-ipam-ips: "192.168.2.105"
+        externalTrafficPolicy: Cluster
+        type: LoadBalancer
         ports:
           http:
             port: 9001
