--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -112,13 +112,13 @@ spec:
         className: internal
         annotations:
           hajimari.io/icon: mdi:pail
-          gethomepage.dev/enabled: "true"
-          gethomepage.dev/group: Storage
-          gethomepage.dev/icon: mdi-pail
-          gethomepage.dev/name: minio
-          gethomepage.dev/widget.type: minio
-          gethomepage.dev/widget.hideErrors: true
-          gethomepage.dev/siteMonitor: https://s3.${SECRET_DOMAIN}
+          # gethomepage.dev/enabled: "true"
+          # gethomepage.dev/group: Storage
+          # gethomepage.dev/icon: mdi-pail
+          # gethomepage.dev/name: minio
+          # gethomepage.dev/widget.type: minio
+          # gethomepage.dev/widget.hideErrors: true
+          # gethomepage.dev/siteMonitor: https://s3.${SECRET_DOMAIN}
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
