--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -4,10 +4,24 @@ metadata:
   name: spark-config
 data:
   spark-defaults.conf: |
+    ##
+    ##  https://github.com/zsvoboda/ngods-stocks/blob/main/aio/conf/spark-defaults.conf
+    # spark.sql.extensions                            org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
+    # spark.sql.catalog.warehouse                     org.apache.iceberg.spark.SparkCatalog
+    # spark.sql.defaultCatalog                        warehouse
+    # spark.sql.catalog.warehouse.catalog-impl        org.apache.iceberg.jdbc.JdbcCatalog
+    # spark.sql.catalog.warehouse.uri                 jdbc:postgresql://postgres:5432/ngods?user=ngods&password=ngods
+    # spark.sql.catalog.warehouse.jdbc.useSSL         false
+    # spark.sql.catalog.warehouse.jdbc.user           ngods
+    # spark.sql.catalog.warehouse.jdbc.password       ngods
+    # spark.sql.catalog.warehouse.io-impl             org.apache.iceberg.aws.s3.S3FileIO
+    # spark.sql.catalog.warehouse.warehouse           s3a://warehouse
+    # spark.sql.catalog.warehouse.s3.endpoint         http://minio:9000
+
     spark.sql.extensions                                  io.delta.sql.DeltaSparkSessionExtension
-    spark.sql.catalog.warehouse                           org.apache.spark.sql.delta.catalog.DeltaCatalog
+    spark.sql.catalog.spark_catalog                       org.apache.spark.sql.delta.catalog.DeltaCatalog
     # spark.sql.warehouse.dir                             s3a://spark/warehouse
-    spark.sql.warehouse.dir                               /opt/spark/workspace/
+    spark.sql.spark_catalog.dir                           /opt/spark/workspace/
     spark.hadoop.fs.s3a.endpoint                          http://minio.kube-system.svc.cluster.local:9000
     spark.hadoop.fs.s3a.endpoint.region                   us-east-1
     spark.hadoop.fs.s3a.access.key                        ${SECRET_SPARKMINIO_ACCESS_KEY}
