--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -18,6 +18,7 @@ data:
     # spark.sql.catalog.warehouse.warehouse           s3a://warehouse
     # spark.sql.catalog.warehouse.s3.endpoint         http://minio:9000
 
+    spark.master                                          spark://sparknova-spark-master-svc:7077
     spark.sql.extensions                                  io.delta.sql.DeltaSparkSessionExtension
     spark.sql.catalog.spark_catalog                       org.apache.spark.sql.delta.catalog.DeltaCatalog
     # spark.sql.warehouse.dir                             s3a://spark/warehouse
