--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -70,6 +70,11 @@ spec:
               - name: http
                 containerPort: 10009
                 protocol: TCP
+            env:
+              kyuubi.engineEnv.SPARK_DRIVER_MEMORY: 6g
+              kyuubi.engineEnv.SPARK_DRIVER_CORES: "2"
+              kyuubi.engineEnv.SPARK_EXECUTOR_MEMORY: 4g
+              kyuubi.engineEnv.SPARK_EXECUTOR_CORES: "1"
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
