--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -235,4 +235,10 @@ spec:
         path: /volume1/network-storage/sparknova/kyuubi/work
         globalMounts:
           - path: /opt/kyuubi/work
-
+      logs:
+        enabled: true
+        type: nfs
+        server: 192.168.1.2
+        path: /volume1/network-storage/sparknova/logs
+        globalMounts:
+          - path: /opt/spark/logs
