--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
           main:
             image:
               repository: docker.io/clarknova9/spark
-              tag: 3.5.0-v0.0.3
+              tag: 3.5.0-scala2.12-v0.0.3
             imagePullPolicy: Always
             command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.master.Master"]
             ports:
@@ -53,7 +53,7 @@ spec:
           jupyter:
             image:
               repository: docker.io/clarknova9/spark
-              tag: 3.5.0-v0.0.3
+              tag: 3.5.0-scala2.12-v0.0.3
             imagePullPolicy: Always
             command: ["jupyter", "lab", "--allow-root", "--ip=0.0.0.0", "--NotebookApp.token=", "--no-browser", "--ServerApp.root_dir=/opt/"]
             ports:
@@ -63,7 +63,7 @@ spec:
           kyuubi:
             image:
               repository: docker.io/clarknova9/spark
-              tag: 3.5.0-v0.0.3
+              tag: 3.5.0-scala2.12-v0.0.3
             imagePullPolicy: Always
             command: ["/opt/kyuubi/bin/kyuubi", "run"]
             ports:
@@ -86,7 +86,7 @@ spec:
           spark-worker:
             image:
               repository: docker.io/clarknova9/spark
-              tag: 3.5.0-v0.0.3
+              tag: 3.5.0-scala2.12-v0.0.3
             imagePullPolicy: Always
             command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.worker.Worker", "spark://sparknova-spark-master-svc:7077"]
             ports:
@@ -220,14 +220,21 @@ spec:
         server: 192.168.1.2
         path: /volume1/network-storage/sparknova/warehouse
         globalMounts:
-          - path: /opt/spark/warehouse
+          - path: /opt/spark-warehouse
+      spark_catalog:
+        enabled: true
+        type: nfs
+        server: 192.168.1.2
+        path: /volume1/network-storage/sparknova/spark_catalog
+        globalMounts:
+          - path: /opt/spark_catalog
       workspace:
         enabled: true
         type: nfs
         server: 192.168.1.2
         path: /volume1/network-storage/sparknova/workspace
         globalMounts:
-          - path: /opt/spark/workspace
+          - path: /opt/workspace
       kyuubi-work:
         enabled: true
         type: nfs
