--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -22,8 +22,10 @@ data:
     spark.master                                          spark://sparknova-spark-master-svc:7077
     spark.sql.extensions                                  io.delta.sql.DeltaSparkSessionExtension
     spark.sql.catalog.spark_catalog                       org.apache.spark.sql.delta.catalog.DeltaCatalog
-    spark.sql.warehouse.dir                               /opt/spark/warehouse/
-    spark.sql.spark_catalog.dir                           /opt/spark/workspace/
+    spark.sql.spark_catalog.dir                           /opt/spark_catalog
+    spark.sql.warehouse.dir                               /opt/spark_catalog
+
+
     spark.hadoop.fs.s3a.endpoint                          http://minio.kube-system.svc.cluster.local:9000
     spark.hadoop.fs.s3a.endpoint.region                   us-east-1
     spark.hadoop.fs.s3a.access.key                        ${SECRET_SPARKMINIO_ACCESS_KEY}
