--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -19,25 +19,27 @@ data:
     # spark.sql.catalog.warehouse.s3.endpoint         http://minio:9000
     # spark.sql.warehouse.dir                               s3a://spark/warehouse
 
+    # spark.hadoop.fs.s3a.endpoint                          http://minio.kube-system.svc.cluster.local:9000
+    # spark.hadoop.fs.s3a.endpoint.region                   us-east-1
+    # spark.hadoop.fs.s3a.access.key                        ${SECRET_SPARKMINIO_ACCESS_KEY}
+    # spark.hadoop.fs.s3a.secret.key                        ${SECRET_SPARKMINIO_SECRET_KEY}
+    # spark.hadoop.fs.s3a.path.style.access                 true
+    # spark.hadoop.fs.s3a.connection.ssl.enabled            false
+    # spark.hadoop.fs.s3a.impl                              org.apache.hadoop.fs.s3a.S3AFileSystem
+    # spark.hadoop.javax.jdo.option.ConnectionDriverName    org.postgresql.Driver
+    # spark.hadoop.javax.jdo.option.ConnectionURL           jdbc:postgresql://cloudnative-pg-cluster.database.svc.cluster.local:5432/metastore
+    # spark.hadoop.javax.jdo.option.ConnectionUserName      ${SECRET_POSTGRES_USERNAME}
+    # spark.hadoop.javax.jdo.option.ConnectionPassword      ${SECRET_POSTGRES_PASSWORD}
+
     spark.master                                          spark://sparknova-spark-master-svc:7077
     spark.sql.extensions                                  io.delta.sql.DeltaSparkSessionExtension
     spark.sql.catalog.spark_catalog                       org.apache.spark.sql.delta.catalog.DeltaCatalog
     spark.sql.spark_catalog.dir                           /opt/spark_catalog
     spark.sql.warehouse.dir                               /opt/spark_catalog
-
-
-    spark.hadoop.fs.s3a.endpoint                          http://minio.kube-system.svc.cluster.local:9000
-    spark.hadoop.fs.s3a.endpoint.region                   us-east-1
-    spark.hadoop.fs.s3a.access.key                        ${SECRET_SPARKMINIO_ACCESS_KEY}
-    spark.hadoop.fs.s3a.secret.key                        ${SECRET_SPARKMINIO_SECRET_KEY}
-    spark.hadoop.fs.s3a.path.style.access                 true
-    spark.hadoop.fs.s3a.connection.ssl.enabled            false
-    spark.hadoop.fs.s3a.impl                              org.apache.hadoop.fs.s3a.S3AFileSystem
-    spark.hadoop.javax.jdo.option.ConnectionDriverName    org.postgresql.Driver
-    spark.hadoop.javax.jdo.option.ConnectionURL           jdbc:postgresql://cloudnative-pg-cluster.database.svc.cluster.local:5432/metastore
-    spark.hadoop.javax.jdo.option.ConnectionUserName      ${SECRET_POSTGRES_USERNAME}
-    spark.hadoop.javax.jdo.option.ConnectionPassword      ${SECRET_POSTGRES_PASSWORD}
-
     spark.eventLog.enabled                                true
     spark.eventLog.dir                                    file:///opt/spark/logs/events
     spark.history.fs.logDirectory                         file:///opt/spark/logs/history
+
+
+
+
