--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -6,17 +6,17 @@ data:
   spark-defaults.conf: |
     ##
     ##  https://github.com/zsvoboda/ngods-stocks/blob/main/aio/conf/spark-defaults.conf
-    # spark.sql.extensions                            org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
-    # spark.sql.catalog.warehouse                     org.apache.iceberg.spark.SparkCatalog
-    # spark.sql.defaultCatalog                        warehouse
-    # spark.sql.catalog.warehouse.catalog-impl        org.apache.iceberg.jdbc.JdbcCatalog
-    # spark.sql.catalog.warehouse.uri                 jdbc:postgresql://postgres:5432/ngods?user=ngods&password=ngods
-    # spark.sql.catalog.warehouse.jdbc.useSSL         false
-    # spark.sql.catalog.warehouse.jdbc.user           ngods
-    # spark.sql.catalog.warehouse.jdbc.password       ngods
-    # spark.sql.catalog.warehouse.io-impl             org.apache.iceberg.aws.s3.S3FileIO
-    # spark.sql.catalog.warehouse.warehouse           s3a://warehouse
-    # spark.sql.catalog.warehouse.s3.endpoint         http://minio:9000
+    # spark.sql.extensions                                  org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
+    # spark.sql.catalog.warehouse                           org.apache.iceberg.spark.SparkCatalog
+    # spark.sql.defaultCatalog                              warehouse
+    # spark.sql.catalog.warehouse.catalog-impl              org.apache.iceberg.jdbc.JdbcCatalog
+    # spark.sql.catalog.warehouse.uri                       jdbc:postgresql://postgres:5432/ngods?user=ngods&password=ngods
+    # spark.sql.catalog.warehouse.jdbc.useSSL               false
+    # spark.sql.catalog.warehouse.jdbc.user                 ngods
+    # spark.sql.catalog.warehouse.jdbc.password             ngods
+    # spark.sql.catalog.warehouse.io-impl                   org.apache.iceberg.aws.s3.S3FileIO
+    # spark.sql.catalog.warehouse.warehouse                 s3a://warehouse
+    # spark.sql.catalog.warehouse.s3.endpoint               http://minio:9000
     # spark.sql.warehouse.dir                               s3a://spark/warehouse
 
     # spark.hadoop.fs.s3a.endpoint                          http://minio.kube-system.svc.cluster.local:9000
@@ -31,15 +31,26 @@ data:
     # spark.hadoop.javax.jdo.option.ConnectionUserName      ${SECRET_POSTGRES_USERNAME}
     # spark.hadoop.javax.jdo.option.ConnectionPassword      ${SECRET_POSTGRES_PASSWORD}
 
-    spark.master                                          spark://sparknova-spark-master-svc:7077
-    spark.sql.extensions                                  io.delta.sql.DeltaSparkSessionExtension
-    spark.sql.catalog.spark_catalog                       org.apache.spark.sql.delta.catalog.DeltaCatalog
-    spark.sql.spark_catalog.dir                           /opt/spark_catalog
-    spark.sql.warehouse.dir                               /opt/spark_catalog
-    spark.eventLog.enabled                                true
-    spark.eventLog.dir                                    file:///opt/spark/logs/events
-    spark.history.fs.logDirectory                         file:///opt/spark/logs/history
+    # spark.master                                          spark://sparknova-spark-master-svc:7077
+    # spark.sql.extensions                                  io.delta.sql.DeltaSparkSessionExtension
+    # spark.sql.catalog.spark_catalog                       org.apache.spark.sql.delta.catalog.DeltaCatalog
+    # spark.sql.spark_catalog.dir                           /opt/spark_catalog
+    # spark.sql.warehouse.dir                               /opt/spark_catalog
+    # spark.eventLog.enabled                                true
+    # spark.eventLog.dir                                    file:///opt/spark/logs/events
+    # spark.history.fs.logDirectory                         file:///opt/spark/logs/history
 
-
-
+    spark.master                                            spark://sparknova-spark-master-svc:7077
+    spark.sql.extensions                                    io.delta.sql.DeltaSparkSessionExtension
+    spark.sql.defaultCatalog                                warehouse
+    spark.sql.catalog.warehouse                             org.apache.spark.sql.delta.catalog.DeltaCatalog
+    spark.sql.catalog.warehouse.warehouse                   s3a://spark/warehouse
+    spark.sql.catalog.warehouse.s3.endpoint                 http://minio.kube-system.svc.cluster.local:9000
+    spark.sql.catalog.warehouse.uri                         jdbc:postgresql://cloudnative-pg-cluster.database.svc.cluster.local:5432/metastore?user=${SECRET_POSTGRES_USERNAME}&password=${SECRET_POSTGRES_PASSWORD}
+    spark.sql.catalog.warehouse.jdbc.useSSL                 false
+    spark.sql.catalog.warehouse.jdbc.user                   ${SECRET_POSTGRES_USERNAME}
+    spark.sql.catalog.warehouse.jdbc.password               ${SECRET_POSTGRES_PASSWORD}
+    spark.eventLog.enabled                                  true
+    spark.eventLog.dir                                      file:///opt/spark/logs/events
+    spark.history.fs.logDirectory                           file:///opt/spark/logs/history
 
