--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -108,7 +108,7 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
-            kubernetes.io/hostname: aurora
+            kubernetes.io/hostname: k8s-01
       # kyuubi:
       #   type: statefulset
       #   containers:
