--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -43,14 +43,13 @@ data:
     spark.master                                            spark://sparknova-spark-master-svc:7077
     spark.sql.extensions                                    io.delta.sql.DeltaSparkSessionExtension
     spark.sql.catalog.spark_catalog                         org.apache.spark.sql.delta.catalog.DeltaCatalog
-    spark.sql.defaultCatalog                                warehouse
-    spark.sql.catalog.warehouse                             org.apache.spark.sql.delta.catalog.DeltaCatalog
-    spark.sql.catalog.warehouse.warehouse                   s3a://spark/warehouse
-    spark.sql.catalog.warehouse.s3.endpoint                 http://minio.kube-system.svc.cluster.local:9000
-    spark.sql.catalog.warehouse.uri                         jdbc:postgresql://cloudnative-pg-cluster.database.svc.cluster.local:5432/metastore?user=${SECRET_POSTGRES_USERNAME}&password=${SECRET_POSTGRES_PASSWORD}
-    spark.sql.catalog.warehouse.jdbc.useSSL                 false
-    spark.sql.catalog.warehouse.jdbc.user                   ${SECRET_POSTGRES_USERNAME}
-    spark.sql.catalog.warehouse.jdbc.password               ${SECRET_POSTGRES_PASSWORD}
+    spark.sql.defaultCatalog                                spark_catalog
+    spark.sql.catalog.spark_catalog.warehouse               s3a://spark/spark_catalog
+    spark.sql.catalog.spark_catalog.s3.endpoint             http://minio.kube-system.svc.cluster.local:9000
+    spark.sql.catalog.spark_catalog.uri                     jdbc:postgresql://cloudnative-pg-cluster.database.svc.cluster.local:5432/metastore?user=${SECRET_POSTGRES_USERNAME}&password=${SECRET_POSTGRES_PASSWORD}
+    spark.sql.catalog.spark_catalog.jdbc.useSSL             false
+    spark.sql.catalog.spark_catalog.jdbc.user               ${SECRET_POSTGRES_USERNAME}
+    spark.sql.catalog.spark_catalog.jdbc.password           ${SECRET_POSTGRES_PASSWORD}
     spark.eventLog.enabled                                  true
     spark.eventLog.dir                                      file:///opt/spark/logs/events
     spark.history.fs.logDirectory                           file:///opt/spark/logs/history
