--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1beta1.json
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: database
@@ -6,4 +7,4 @@ resources:
   - ./helmrelease.yaml
   - ./scheduled-backup.yaml
   - ./service.yaml
-  - ./pvc.yaml
+ # - ./pvc.yaml
