--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -52,7 +52,12 @@ data:
     spark.master                                            spark://sparknova-spark-master-svc:7077
     spark.sql.extensions                                    io.delta.sql.DeltaSparkSessionExtension
     spark.sql.catalog.spark_catalog                         org.apache.spark.sql.delta.catalog.DeltaCatalog
-    spark.sql.spark_catalog.dir                             s3a://spark/warehouse
+    spark.sql.catalogImplementation                         hive
+    spark.sql.warehouse.dir                                 s3a://spark/warehouse
+    spark.hadoop.javax.jdo.option.ConnectionURL             jdbc:postgresql://192.168.2.45:5432/metastore
+    spark.hadoop.javax.jdo.option.ConnectionDriverName      org.postgresql.Driver
+    spark.hadoop.javax.jdo.option.ConnectionUserName        ${SECRET_POSTGRES_USERNAME}
+    spark.hadoop.javax.jdo.option.ConnectionPassword        ${SECRET_POSTGRES_PASSWORD}
     spark.hadoop.fs.s3a.endpoint                            http://minio.kube-system.svc.cluster.local:9000
     spark.hadoop.fs.s3a.endpoint.region                     us-east-1
     spark.hadoop.fs.s3a.access.key                          ${SECRET_SPARKMINIO_ACCESS_KEY}
@@ -60,7 +65,6 @@ data:
     spark.hadoop.fs.s3a.path.style.access                   true
     spark.hadoop.fs.s3a.connection.ssl.enabled              false
     spark.hadoop.fs.s3a.impl                                org.apache.hadoop.fs.s3a.S3AFileSystem
-    spark.sql.warehouse.dir                                 s3a://spark/warehouse
     spark.eventLog.enabled                                  true
     spark.eventLog.dir                                      file:///opt/spark/logs/events
     spark.history.fs.logDirectory                           file:///opt/spark/logs/history
