--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -54,7 +54,7 @@ data:
     spark.sql.catalog.spark_catalog                         org.apache.spark.sql.delta.catalog.DeltaCatalog
     spark.sql.catalogImplementation                         hive
     spark.sql.warehouse.dir                                 s3a://spark/warehouse
-    spark.hadoop.javax.jdo.option.ConnectionURL             jdbc:postgresql://192.168.2.45:5432/metastore
+    spark.hadoop.javax.jdo.option.ConnectionURL             jdbc:postgresql://cloudnative-pg-cluster.database.svc.cluster.local:5432/metastore
     spark.hadoop.javax.jdo.option.ConnectionDriverName      org.postgresql.Driver
     spark.hadoop.javax.jdo.option.ConnectionUserName        ${SECRET_POSTGRES_USERNAME}
     spark.hadoop.javax.jdo.option.ConnectionPassword        ${SECRET_POSTGRES_PASSWORD}
