--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -47,9 +47,9 @@ spec:
               SPARK_MODE: master
               SPARK_MASTER_PORT: "7077"
               SPARK_MASTER_WEBUI_PORT: "8080"
-              SPARK_MASTER_OPTS: |
-                -Dspark.ui.reverseProxy=true
-                -Dspark.ui.reverseProxyUrl=https://spark.${SECRET_DOMAIN}
+              # SPARK_MASTER_OPTS: |
+              #   -Dspark.ui.reverseProxy=true
+              #   -Dspark.ui.reverseProxyUrl=https://spark.${SECRET_DOMAIN}
           jupyter:
             image:
               repository: docker.io/clarknova9/spark
@@ -102,10 +102,10 @@ spec:
               SPARK_WORKER_MEMORY: 8G
               SPARK_WORKER_CORES: "2"
               SPARK_WORKER_WEBUI_PORT: "8081"
-              SPARK_WORKER_OPTS: |
-                -Dspark.ui.reverseProxy=true
-                -Dspark.ui.reverseProxyUrl=https://spark.${SECRET_DOMAIN}
-        pod:
+        #       SPARK_WORKER_OPTS: |
+        #         -Dspark.ui.reverseProxy=true
+        #         -Dspark.ui.reverseProxyUrl=https://spark.${SECRET_DOMAIN}
+        # pod:
           nodeSelector:
             kubernetes.io/arch: amd64
             kubernetes.io/hostname: k8s-01
