--- a/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
+++ b/kubernetes/apps/default/sparknova/app/spark-configmap.yaml
@@ -69,4 +69,5 @@ data:
     spark.eventLog.dir                                      file:///opt/spark/logs/events
     spark.history.fs.logDirectory                           file:///opt/spark/logs/history
     spark.deploy.defaultCores                               2
-    spark.ui.reverseProxy                                   https://spark.${SECRET_DOMAIN}
+    spark.ui.reverseProxy                                   true
+    spark.ui.reverseProxyUrl                                https://spark.${SECRET_DOMAIN}
