--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
-            kubernetes.io/hostname: nuc11
+            kubernetes.io/hostname: aurora
       spark-worker:
         type: statefulset
         replicas: 3
@@ -103,7 +103,7 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
-            #kubernetes.io/hostname: aurora
+            kubernetes.io/hostname: nuc11
       # kyuubi:
       #   type: statefulset
       #   containers:
