--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -48,40 +48,12 @@ spec:
               SPARK_MODE: master
               SPARK_MASTER_PORT: "7077"
               SPARK_MASTER_WEBUI_PORT: "8080"
-          jupyter:
-            image:
-              repository: docker.io/clarknova9/spark
-              tag: 3.5.0-scala2.12-v0.0.4
-            imagePullPolicy: Always
-            command: ["jupyter", "lab", "--allow-root", "--ip=0.0.0.0", "--NotebookApp.token=", "--no-browser", "--ServerApp.root_dir=/opt/workspace"]
-            ports:
-              - name: jupyter
-                containerPort: 8888
-                protocol: TCP
-          kyuubi:
-            image:
-              repository: docker.io/clarknova9/spark
-              tag: 3.5.0-scala2.12-v0.0.4
-            imagePullPolicy: Always
-            command: ["/opt/kyuubi/bin/kyuubi", "run"]
-            ports:
-              - name: http
-                containerPort: 10009
-                protocol: TCP
-              - name: thrift
-                containerPort: 10000
-                protocol: TCP
-            env:
-              kyuubi.engineEnv.SPARK_DRIVER_MEMORY: 4g
-              kyuubi.engineEnv.SPARK_DRIVER_CORES: "2"
-              kyuubi.engineEnv.SPARK_EXECUTOR_MEMORY: 2g
-              kyuubi.engineEnv.SPARK_EXECUTOR_CORES: "2"
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
             kubernetes.io/hostname: aurora
       spark-worker:
-        type: statefulset
+        type: deployment
         replicas: 3
         containers:
           spark-worker:
@@ -103,24 +75,48 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
-            kubernetes.io/hostname: nuc11
-      # kyuubi:
-      #   type: statefulset
-      #   containers:
-      #     kyuubi:
-      #       image:
-      #         repository: docker.io/clarknova9/spark
-      #         tag: 3.5.0-delta
-      #       imagePullPolicy: Always
-      #       command: ["/opt/kyuubi/bin/kyuubi start"]
-      #       ports:
-      #         - name: http
-      #           containerPort: 10009
-      #           protocol: TCP
-      #   pod:
-      #     nodeSelector:
-      #       #kubernetes.io/arch: amd64
-      #       kubernetes.io/hostname: k8s-01
+      jupyter:
+        type: deployment
+        replicas: 1
+        containers:
+          jupyter:
+            image:
+              repository: docker.io/clarknova9/spark
+              tag: 3.5.0-scala2.12-v0.0.4
+            imagePullPolicy: Always
+            command: ["jupyter", "lab", "--allow-root", "--ip=0.0.0.0", "--NotebookApp.token=", "--no-browser", "--ServerApp.root_dir=/opt/workspace"]
+            ports:
+              - name: http
+                containerPort: 8888
+                protocol: TCP
+        pod:
+          nodeSelector:
+            kubernetes.io/arch: amd64
+      kyuubi:
+        type: deployment
+        replicas: 1
+        containers:
+          kyuubi:
+            image:
+              repository: docker.io/clarknova9/spark
+              tag: 3.5.0-scala2.12-v0.0.4
+            imagePullPolicy: Always
+            command: ["/opt/kyuubi/bin/kyuubi", "run"]
+            ports:
+              - name: http
+                containerPort: 10009
+                protocol: TCP
+              - name: thrift
+                containerPort: 10000
+                protocol: TCP
+            env:
+              kyuubi.engineEnv.SPARK_DRIVER_MEMORY: 4g
+              kyuubi.engineEnv.SPARK_DRIVER_CORES: "2"
+              kyuubi.engineEnv.SPARK_EXECUTOR_MEMORY: 2g
+              kyuubi.engineEnv.SPARK_EXECUTOR_CORES: "2"
+        pod:
+          nodeSelector:
+            kubernetes.io/arch: amd64
     service:
       main:
         annotations:
@@ -141,7 +137,7 @@ spec:
             port: 7077
             targetPort: 7077
       jupyter:
-        controller: main
+        controller: jupyter
         # -- Override the name suffix that is used for this service
         nameOverride: jupyter-svc
         # -- Provide additional labels which may be required.
@@ -157,7 +153,7 @@ spec:
           io.cilium/lb-ipam-ips: "192.168.2.101"
         externalTrafficPolicy: Cluster
         type: LoadBalancer
-        controller: main
+        controller: kyuubi
         # -- Override the name suffix that is used for this service
         nameOverride: kyuubi-svc
         # -- Provide additional labels which may be required.
@@ -173,7 +169,7 @@ spec:
           io.cilium/lb-ipam-ips: "192.168.2.102"
         externalTrafficPolicy: Cluster
         type: LoadBalancer
-        controller: main
+        controller: kyuubi
         # -- Override the name suffix that is used for this service
         nameOverride: thrift-svc
         # -- Provide additional labels which may be required.
