--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -44,6 +44,9 @@ spec:
               - name: cluster
                 containerPort: 7077
                 protocol: TCP
+              - name: rest
+                containerPort: 6066
+                protocol: TCP
             env:
               SPARK_MODE: master
               SPARK_MASTER_PORT: "7077"
@@ -66,12 +69,12 @@ spec:
               - name: http
                 containerPort: 8081
                 protocol: TCP
-            # env:
-            #   SPARK_MODE: worker
-            #   SPARK_MASTER_URL: spark://sparknova-spark-master-svc:7077
-            #   SPARK_WORKER_MEMORY: 4G
-            #   SPARK_WORKER_CORES: "2"
-            #   SPARK_WORKER_WEBUI_PORT: "8081"
+            env:
+              SPARK_MODE: worker
+              SPARK_MASTER_URL: spark://sparknova-spark-master-svc:7077
+              SPARK_WORKER_MEMORY: 4G
+              SPARK_WORKER_CORES: "2"
+              SPARK_WORKER_WEBUI_PORT: "8081"
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
@@ -136,6 +139,10 @@ spec:
             protocol: TCP
             port: 7077
             targetPort: 7077
+          rest:
+            protocol: TCP
+            port: 6066
+            targetPort: 6066
       jupyter:
         controller: jupyter
         # -- Override the name suffix that is used for this service
